5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4346/executions/1577_1326.log
== TEST (2019-03-14 19:18:39) 
-- CODE:
print (R$ 75
	
-- ERROR:
File "XXXX", line 1
    print (R$ 75
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:43) 
-- CODE:
print (R$ 75
	
-- EXECUTION TIME:
0.139383
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print (R$ 75
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:55) 
-- CODE:
print (R$ 75 )
	
-- EXECUTION TIME:
0.189895
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print (R$ 75 )
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:18:56) 
-- CODE:
print (R$ 75 )
	
-- ERROR:
File "XXXX", line 1
    print (R$ 75 )
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:58) 
-- CODE:
print (R$ 75 )
	
-- EXECUTION TIME:
0.163453
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print (R$ 75 )
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:19:09) 
-- CODE:
print ( 75 )
	
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:11) 
-- CODE:
print ( 75 )
	
-- EXECUTION TIME:
0.217281
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
